--- a/test/Makefile
+++ b/test/Makefile
@@ -3,7 +3,7 @@
 
 CFLAGS = -s EXPORTED_FUNCTIONS='["update", "init"]' -s WASM=1 -s SIDE_MODULE=1 -O2
 
-all: simple line color translation scale rotation transform
+all: simple line color translation scale rotation transform audio
 
 simple: simple.c
 	${CC} ${CFLAGS} -o simple.wasm simple.c
@@ -25,3 +25,6 @@ rotation: rotation.c vectron.h
 
 transform: transform.c vectron.h
 	${CC} ${CFLAGS} -o transform.wasm transform.c
+
+audio: audio.c vectron.h
+	${CC} ${CFLAGS} -o audio.wasm audio.c
